# OOPS

include/: oopsconfig.h
maxwell/: .CMakeLists.txt.un~  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
maxwell/FieldTest/: Makefile  cmake_install.cmake
maxwell/MultiGrid/: Makefile  cmake_install.cmake
maxwell/include/: .maxwell.h.un~  .maxwellparameters.h.un~  .maxwellparser.h.un~  maxwell.h  maxwell.h~  maxwellparameters.h  maxwellparameters.h~  maxwellparser.h
maxwell/maxwell/: Makefile  Wave  cmake_install.cmake  phi00000.csv  phi00001.csv  phi00002.csv  phi00003.csv  phi00004.csv  phi00005.csv  phi00006.csv  phi00007.csv  phi00008.csv  phi00009.csv  phi00010.csv  phi00011.csv  phi00012.csv  phi00013.csv  phi00014.csv  phi00015.csv  phi00016.csv  phi00017.csv  phi00018.csv  phi00019.csv  phi00020.csv  phi00021.csv  phi00022.csv  phi00023.csv  phi00024.csv  phi00025.csv  phi00026.csv  phi00027.csv  phi00028.csv  phi00029.csv  phi00030.csv  phi00031.csv  phi00032.csv  phi00033.csv  phi00034.csv  phi00035.csv  phi00036.csv  (+965 more)
maxwell/src/: .main.cpp.un~  .maxwell.cpp.un~  .maxwellparser.cpp.un~  main.cpp  main.cpp~  maxwell.cpp  maxwell.cpp~  maxwellparser.cpp
maxwell/tests/: Makefile
